resources/css/app.css
@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

@import "tailwindcss/base";

@import "tailwindcss/components";

@import "tailwindcss/utilities";

* {
    box-sizing: border-box;
}


/* For Alpine.js */
/*****************/
[x-cloak] {
    display: none;
}


/* Custom CSS */
/**************/
.max-width-1375 {
    max-width: 1300px;
}

.input-icon-padding-6px {
    padding-left: 6px;
}

.tenant-index-modal-background {
    background-color: rgba(0, 0, 0, 0.50);
}

.work-detail-image-wrapper {
    max-width: 75px;
    max-height: 75px;
}

.image-sizing {
    min-height: 80px;
}

.index-data-table-button-position {
    top: 78px;
}

.max-height-property-images {
    max-height: 462px;
}

.max-height-property-image-box {
    max-height: 462px;
}

.max-height-property-image-upload {
    max-height: 674px;
}

.image-thumbnail-property-gallery {
    width: 7.3rem;
    height: 7.3rem;
}

@media screen and (max-width: 360px) {
    .image-thumbnail-property-gallery {
        width: 5.75rem;
        height: 5.75rem;
    }
}


/* Style for upload progress bar */
/*********************************/
progress {
    border-radius: 7px;
}

progress::-webkit-progress-bar {
    background-color: lightgray;
    border-radius: 7px;
}

progress::-webkit-progress-value {
    background-color: #fbc88d;
    border-radius: 7px;
}


/* Lease application status bar */
/********************************/
.progress-bar .step:last-child .bullet:before,
.progress-bar .step:last-child .bullet:after {
    display: none;
}

.progress-bar .step .bullet:before,
.progress-bar .step .bullet:after {
    position: absolute;
    content: '';
    height: 2px;
    width: 45px;
    background: #c8cbd0;
    left: 40px;
}

.check-hidden {
    display: none !important;
}

